<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_1"
    tools:context=".MenuActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="411dp"
        android:layout_height="92dp"
        android:layout_marginTop="175dp"
        android:background="@color/green_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button3"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/montaga"
            android:onClick="onClickDodaj"
            android:text="@string/b_1"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button5"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="130dp"
            android:layout_height="90dp"
            android:layout_marginEnd="140dp"
            android:fontFamily="@font/montaga"
            android:onClick="onClickZobacz"
            android:text="@string/b_2"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="105dp"
            android:layout_height="106dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button5"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/imagine"
            app:srcCompat="@drawable/ic_drink" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="96dp"
        android:layout_height="137dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="308dp"
        android:layout_marginBottom="23dp"
        android:contentDescription="@string/imagine"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_fish"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="98dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/montaga"
        android:text="@string/work_1"
        android:textColor="@color/work_1"
        android:textSize="50dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="98dp"
        android:fontFamily="@font/montaga"
        android:text="@string/work_2"
        android:textColor="@color/work_2"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="129dp"
        android:layout_height="122dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/imagine"
        app:srcCompat="@drawable/ic_bonsai" />

</androidx.constraintlayout.widget.ConstraintLayout>